@@ -484,13 +484,13 @@ operator|new
 name|ScoringBooleanQueryRewrite
 argument_list|()
 decl_stmt|;
-comment|/** A rewrite method that first translates each term into    *  {@link BooleanClause.Occur#SHOULD} clause in a    *  BooleanQuery, and keeps the scores as computed by the    *  query.    *    *<p>This rewrite mode only uses the top scoring terms    * so it will not overflow the boolean max clause count.    * It is the default rewrite mode for {@link FuzzyQuery}.    *    *  @see #setRewriteMethod */
-DECL|class|TopTermsScoringBooleanQueryRewrite
+comment|/**    * Base rewrite method for collecting only the top terms    * via a priority queue.    */
+DECL|class|TopTermsBooleanQueryRewrite
 specifier|public
 specifier|static
-specifier|final
+specifier|abstract
 class|class
-name|TopTermsScoringBooleanQueryRewrite
+name|TopTermsBooleanQueryRewrite
 extends|extends
 name|BooleanQueryRewrite
 block|{
@@ -500,10 +500,10 @@ specifier|final
 name|int
 name|size
 decl_stmt|;
-comment|/**       * Create a TopTermsScoringBooleanQueryRewrite for       * at most<code>size</code> terms.      *<p>      * NOTE: if {@link BooleanQuery#getMaxClauseCount} is smaller than       *<code>size</code>, then it will be used instead.       */
-DECL|method|TopTermsScoringBooleanQueryRewrite
+comment|/**       * Create a TopTermsBooleanQueryRewrite for       * at most<code>size</code> terms.      *<p>      * NOTE: if {@link BooleanQuery#getMaxClauseCount} is smaller than       *<code>size</code>, then it will be used instead.       */
+DECL|method|TopTermsBooleanQueryRewrite
 specifier|public
-name|TopTermsScoringBooleanQueryRewrite
+name|TopTermsBooleanQueryRewrite
 parameter_list|(
 name|int
 name|size
@@ -516,10 +516,10 @@ operator|=
 name|size
 expr_stmt|;
 block|}
-comment|/**       * Create a TopTermsScoringBooleanQueryRewrite that is limited      * to at most {@link BooleanQuery#getMaxClauseCount} terms.       */
-DECL|method|TopTermsScoringBooleanQueryRewrite
+comment|/**       * Create a TopTermsBooleanQueryRewrite that is limited      * to at most {@link BooleanQuery#getMaxClauseCount} terms.       */
+DECL|method|TopTermsBooleanQueryRewrite
 specifier|public
-name|TopTermsScoringBooleanQueryRewrite
+name|TopTermsBooleanQueryRewrite
 parameter_list|()
 block|{
 name|this
@@ -530,6 +530,17 @@ name|MAX_VALUE
 argument_list|)
 expr_stmt|;
 block|}
+comment|/** Return a suitable Query for a MultiTermQuery term. */
+DECL|method|getQuery
+specifier|protected
+specifier|abstract
+name|Query
+name|getQuery
+parameter_list|(
+name|Term
+name|term
+parameter_list|)
+function_decl|;
 annotation|@
 name|Override
 DECL|method|rewrite
@@ -695,11 +706,10 @@ range|:
 name|stQueue
 control|)
 block|{
-name|TermQuery
+name|Query
 name|tq
 init|=
-operator|new
-name|TermQuery
+name|getQuery
 argument_list|(
 name|st
 operator|.
@@ -827,11 +837,11 @@ condition|)
 return|return
 literal|false
 return|;
-name|TopTermsScoringBooleanQueryRewrite
+name|TopTermsBooleanQueryRewrite
 name|other
 init|=
 operator|(
-name|TopTermsScoringBooleanQueryRewrite
+name|TopTermsBooleanQueryRewrite
 operator|)
 name|obj
 decl_stmt|;
@@ -918,6 +928,124 @@ name|boost
 argument_list|)
 return|;
 block|}
+block|}
+block|}
+comment|/**    * A rewrite method that first translates each term into    * {@link BooleanClause.Occur#SHOULD} clause in a BooleanQuery, and keeps the    * scores as computed by the query.    *     *<p>    * This rewrite mode only uses the top scoring terms so it will not overflow    * the boolean max clause count. It is the default rewrite mode for    * {@link FuzzyQuery}.    *     * @see #setRewriteMethod    */
+DECL|class|TopTermsScoringBooleanQueryRewrite
+specifier|public
+specifier|static
+specifier|final
+class|class
+name|TopTermsScoringBooleanQueryRewrite
+extends|extends
+name|TopTermsBooleanQueryRewrite
+block|{
+comment|/**       * Create a TopTermsScoringBooleanQueryRewrite that is limited      * to at most {@link BooleanQuery#getMaxClauseCount} terms.       */
+DECL|method|TopTermsScoringBooleanQueryRewrite
+specifier|public
+name|TopTermsScoringBooleanQueryRewrite
+parameter_list|()
+block|{
+name|super
+argument_list|()
+expr_stmt|;
+block|}
+comment|/**       * Create a TopTermsScoringBooleanQueryRewrite for       * at most<code>size</code> terms.      *<p>      * NOTE: if {@link BooleanQuery#getMaxClauseCount} is smaller than       *<code>size</code>, then it will be used instead.       */
+DECL|method|TopTermsScoringBooleanQueryRewrite
+specifier|public
+name|TopTermsScoringBooleanQueryRewrite
+parameter_list|(
+name|int
+name|size
+parameter_list|)
+block|{
+name|super
+argument_list|(
+name|size
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Override
+DECL|method|getQuery
+specifier|protected
+name|Query
+name|getQuery
+parameter_list|(
+name|Term
+name|term
+parameter_list|)
+block|{
+return|return
+operator|new
+name|TermQuery
+argument_list|(
+name|term
+argument_list|)
+return|;
+block|}
+block|}
+comment|/**    * A rewrite method that first translates each term into    * {@link BooleanClause.Occur#SHOULD} clause in a BooleanQuery, but the scores    * are only computed as the boost.    *<p>    * This rewrite method only uses the top scoring terms so it will not overflow    * the boolean max clause count.    *     * @see #setRewriteMethod    */
+DECL|class|TopTermsBoostOnlyBooleanQueryRewrite
+specifier|public
+specifier|static
+specifier|final
+class|class
+name|TopTermsBoostOnlyBooleanQueryRewrite
+extends|extends
+name|TopTermsBooleanQueryRewrite
+block|{
+comment|/**       * Create a TopTermsBoostOnlyBooleanQueryRewrite that is limited      * to at most {@link BooleanQuery#getMaxClauseCount} terms.       */
+DECL|method|TopTermsBoostOnlyBooleanQueryRewrite
+specifier|public
+name|TopTermsBoostOnlyBooleanQueryRewrite
+parameter_list|()
+block|{
+name|super
+argument_list|()
+expr_stmt|;
+block|}
+comment|/**       * Create a TopTermsBoostOnlyBooleanQueryRewrite for       * at most<code>size</code> terms.      *<p>      * NOTE: if {@link BooleanQuery#getMaxClauseCount} is smaller than       *<code>size</code>, then it will be used instead.       */
+DECL|method|TopTermsBoostOnlyBooleanQueryRewrite
+specifier|public
+name|TopTermsBoostOnlyBooleanQueryRewrite
+parameter_list|(
+name|int
+name|size
+parameter_list|)
+block|{
+name|super
+argument_list|(
+name|size
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Override
+DECL|method|getQuery
+specifier|protected
+name|Query
+name|getQuery
+parameter_list|(
+name|Term
+name|term
+parameter_list|)
+block|{
+return|return
+operator|new
+name|ConstantScoreQuery
+argument_list|(
+operator|new
+name|QueryWrapperFilter
+argument_list|(
+operator|new
+name|TermQuery
+argument_list|(
+name|term
+argument_list|)
+argument_list|)
+argument_list|)
+return|;
 block|}
 block|}
 DECL|class|ConstantScoreBooleanQueryRewrite
