@@ -3202,6 +3202,225 @@ name|length
 argument_list|)
 expr_stmt|;
 block|}
+comment|/** Test the TopTermsBoostOnlyBooleanQueryRewrite rewrite method. */
+DECL|method|testBoostOnlyRewrite
+specifier|public
+name|void
+name|testBoostOnlyRewrite
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|RAMDirectory
+name|directory
+init|=
+operator|new
+name|RAMDirectory
+argument_list|()
+decl_stmt|;
+name|IndexWriter
+name|writer
+init|=
+operator|new
+name|IndexWriter
+argument_list|(
+name|directory
+argument_list|,
+operator|new
+name|WhitespaceAnalyzer
+argument_list|(
+name|TEST_VERSION_CURRENT
+argument_list|)
+argument_list|,
+literal|true
+argument_list|,
+name|IndexWriter
+operator|.
+name|MaxFieldLength
+operator|.
+name|LIMITED
+argument_list|)
+decl_stmt|;
+name|addDoc
+argument_list|(
+literal|"Lucene"
+argument_list|,
+name|writer
+argument_list|)
+expr_stmt|;
+name|addDoc
+argument_list|(
+literal|"Lucene"
+argument_list|,
+name|writer
+argument_list|)
+expr_stmt|;
+name|addDoc
+argument_list|(
+literal|"Lucenne"
+argument_list|,
+name|writer
+argument_list|)
+expr_stmt|;
+name|writer
+operator|.
+name|optimize
+argument_list|()
+expr_stmt|;
+name|writer
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|IndexSearcher
+name|searcher
+init|=
+operator|new
+name|IndexSearcher
+argument_list|(
+name|directory
+argument_list|,
+literal|true
+argument_list|)
+decl_stmt|;
+name|IndexReader
+name|reader
+init|=
+name|searcher
+operator|.
+name|getIndexReader
+argument_list|()
+decl_stmt|;
+name|FuzzyQuery
+name|query
+init|=
+operator|new
+name|FuzzyQuery
+argument_list|(
+operator|new
+name|Term
+argument_list|(
+literal|"field"
+argument_list|,
+literal|"Lucene"
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|query
+operator|.
+name|setRewriteMethod
+argument_list|(
+operator|new
+name|MultiTermQuery
+operator|.
+name|TopTermsBoostOnlyBooleanQueryRewrite
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|ScoreDoc
+index|[]
+name|hits
+init|=
+name|searcher
+operator|.
+name|search
+argument_list|(
+name|query
+argument_list|,
+literal|null
+argument_list|,
+literal|1000
+argument_list|)
+operator|.
+name|scoreDocs
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|3
+argument_list|,
+name|hits
+operator|.
+name|length
+argument_list|)
+expr_stmt|;
+comment|// normally, 'Lucenne' would be the first result as IDF will skew the score.
+name|assertEquals
+argument_list|(
+literal|"Lucene"
+argument_list|,
+name|reader
+operator|.
+name|document
+argument_list|(
+name|hits
+index|[
+literal|0
+index|]
+operator|.
+name|doc
+argument_list|)
+operator|.
+name|get
+argument_list|(
+literal|"field"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"Lucene"
+argument_list|,
+name|reader
+operator|.
+name|document
+argument_list|(
+name|hits
+index|[
+literal|1
+index|]
+operator|.
+name|doc
+argument_list|)
+operator|.
+name|get
+argument_list|(
+literal|"field"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"Lucenne"
+argument_list|,
+name|reader
+operator|.
+name|document
+argument_list|(
+name|hits
+index|[
+literal|2
+index|]
+operator|.
+name|doc
+argument_list|)
+operator|.
+name|get
+argument_list|(
+literal|"field"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|searcher
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|reader
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
 DECL|method|testGiga
 specifier|public
 name|void
