@@ -77,6 +77,12 @@ API Changes
   callers can use to query whether a certain file matches a certain extension.
   (Shai Erera via Mike McCandless)  
 
+* LUCENE-124: Add a TopTermsBoostOnlyBooleanQueryRewrite to MultiTermQuery.
+  This rewrite method is similar to TopTermsScoringBooleanQueryRewrite, but
+  only scores terms by their boost values. For example, this can be used 
+  with FuzzyQuery to ensure that exact matches are always scored higher, 
+  because only the boost will be used in scoring.  (Robert Muir)
+  
 Bug fixes
 
 * LUCENE-2119: Don't throw NegativeArraySizeException if you pass
